debug 0703 :bowing_woman:

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>RWD Table accordion</title>
+        <title>Responsive Table accordion Mix Modals</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
         <link rel="stylesheet" href="css/style.css?v=0.2">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 <body>
-    <h1>Table Accordion</h1>
+    <h1>Responsive Table accordion Mix Modals</h1>
     <table class="table">
         <thead>
             <tr>
@@ -47,27 +47,8 @@
     </table>
 
     <script type="text/javascript" src="js/jquery.js"></script>
-    <!-- <script type="text/javascript" src="js/vue.js"></script> -->
-    <script>
-        var $drop = $(".js-drop"),
-            $expand = $('.js-expand'),
-            expand = ".expand";
-            active = "is-active";
+    <script type="text/javascript" src="js/TableExpandableRows-Mix-Modals.js"></script>
 
-        $drop.click(function() {
-            var target = $(this).next().find(expand);
-
-            $expand.each(function() {
-                $(expand).not(target).removeClass(active);
-            });
-            target.toggleClass(active).append('<a href="#" class="js-close"><i class="material-icons">close</i></a>');
-        });
-
-        $(document).on("click", ".js-close", function(e) {
-            e.preventDefault();
-            $(expand).removeClass(active);
-        });
-    </script>
 </body>
 
 </html>
